WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241110
REGRESSION(
245163@main
) Can't load a very large image as an image document
https://bugs.webkit.org/show_bug.cgi?id=241110
Summary
REGRESSION(245163@main) Can't load a very large image as an image document
Fujii Hironori
Reported
2022-05-30 15:00:06 PDT
REGRESSION(
245163@main
) Can't load a very large image as an image document 1. Download a very large image (>100MB) from somewhere For example,
https://esahubble.org/images/heic1901a/
2. Load the image directly Actual: Can't finish loading Expected: Finish loading the image
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-05-30 15:03:05 PDT
combineSegmentsData of SharedBuffer.cpp is being called very frequently every time new data received. On the other hand, before
245163@main
, thank for CachedImage::shouldDeferUpdateImageData, it is not called so frequently.
Radar WebKit Bug Importer
Comment 2
2022-05-30 18:55:58 PDT
<
rdar://problem/94126683
>
Jean-Yves Avenard [:jya]
Comment 3
2022-06-02 19:23:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1264
EWS
Comment 4
2022-06-02 22:32:36 PDT
Committed
r295169
(
251253@main
): <
https://commits.webkit.org/251253@main
> Reviewed commits have been landed. Closing PR #1264 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug