Cherry-pick 001e6462c97c. rdar://problem/94126683

Can't load a very large image as an image document
    https://bugs.webkit.org/show_bug.cgi?id=241110
    <rdar://94126683>

    Reviewed by Jer Noble.

    Stop flattening the SharedBuffer whenever we received a new segment.
    The core logic change to support this was done in https://bugs.webkit.org/show_bug.cgi?id=236695
    but the CachedImage wasn't modified at the time (it should have been).

    We have to use const_cast for now to minimize the change size, proper solution will be done in
    https://bugs.webkit.org/show_bug.cgi?id=241251

    * Source/WebCore/loader/cache/CachedImage.cpp:
    (WebCore::CachedImage::updateBufferInternal):
    (WebCore::CachedImage::updateBuffer):
    * Source/WebCore/loader/cache/CachedImage.h:

    Canonical link: https://commits.webkit.org/251253@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295169 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.737@safari-613-branch